--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "kahve-core",
-	"version": "0.0.0",
+	"version": "0.0.2",
 	"description": "",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
@@ -47,6 +47,7 @@
 		"tslint-config-prettier": "^1.18.0",
 		"tslint-loader": "^3.5.4",
 		"tslint-plugin-prettier": "^2.3.0",
+		"typedoc": "^0.17.8",
 		"typescript": "~3.4.5"
 	}
 }
